# Multi-Agent-Customer-Support-System

./: .env.example  docker-compose.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 92d6f88b9d83_created_database.py
src/: main.py
src/core/: database.py  redis_client.py
src/models/: __init__.py  base.py  business.py  postgres.py  support.py
src/rag/: embedding.py  ingest.py  splitting_text.py
src/schemas/: chat_schemas.py  chunk.py  document.py
