[project]
name = "multi-agent-customer-support-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "certifi>=2026.2.25",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "markdown>=3.10.2",
    "pypdf>=6.9.2",
    "tqdm>=4.67.3",
    "unstructured>=0.22.6",
]
